<resources>
    <string name="app_name">projetDETANT</string>
    <string name="piece1">01</string>
    <string name="piece2">02</string>
    <string name="piece3">03</string>
    <string name="piece4">04</string>
    <string name="piece5">05</string>
    <string name="piece6">06</string>
    <string name="piece7">07</string>
    <string name="piece8">08</string>
    <string name="piece9">09</string>
    <string name="piece10">10</string>
    <string name="piece11">11</string>
    <string name="piece12">12</string>
    <string name="piece13">13</string>
    <string name="piece14">14</string>
    <string name="piece15">15</string>
    <string name="piece16">16</string>
</resources>
